# eendsr

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  prisma_report.txt  pyproject.toml  results.json  summary.xlsx
.github/workflows/: python-package.yml
config/: settings.yaml
docs/: Makefile  evaluation_plan.md  research_notes_25.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: 01_basic_extraction_workflow.ipynb  02_advanced_pico_extraction.ipynb
src/evidence_extractor/cli/: main.py
src/evidence_extractor/core/: __init__.py  ingest.py  preprocess.py  provenance.py
src/evidence_extractor/evaluation/: metrics.py
src/evidence_extractor/extraction/: __init__.py  citations.py  claims.py  figures.py  llm_orchestrator.py  methods.py  pico.py  prompts.py  sections.py  structure.py  summarization.py  tables.py  uncertainty.py
src/evidence_extractor/integration/: gemini_client.py
src/evidence_extractor/models/: schemas.py
src/evidence_extractor/output/: json_builder.py  prisma.py  prisma_diagram.py  spreadsheet.py
src/evidence_extractor/utils/: logging_config.py
tests/: conftest.py
tests/data/: gold_standard.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_citations_extraction.py  test_ingest.py  test_llm_orchestrator.py  test_preprocessing.py  test_schemas.py  test_summarization.py  test_tables_extraction.py  test_uncertainty.py
